--- a/class/CNN/cat_vs_dogs.ipynb
+++ b/class/CNN/cat_vs_dogs.ipynb
@@ -1263,7 +1263,7 @@
         "\n",
         "# Conv Layer 2\n",
         "conv_2 = layers.Conv2D(16,3,activation='relu',name='conv_2')(pool_1)\n",
-        "normalizar2= layers.BatchNormalization()(conv_2)#los vuelve  aponer entre 0 y 1 en una distribucion normal y hace que mejore bastante\n",
+        "normalizar2= layers.BatchNormalization()(conv_2)#los vuelve en una distribucion normal y hace que mejore bastante\n",
         "pool_2=layers.MaxPool2D(pool_size=(2, 2), name='pool_2')(normalizar2)\n",
         "\n",
         "# Conv Layer ...\n",
